# RAG_study

./: README.md  llm_basic.ipynb  pyproject.toml
code/: LCEL.ipynb  fewshot_prompt.ipynb  output_parser.ipynb  output_parser_comma.ipynb  pdf_rag.ipynb  structured_outputparser.ipynb
code/Agent/: Agent.ipynb  Agentic-RAG.ipynb  Bind-Tools.ipynb  Tools.ipynb  iter-Human-In-the-Loop.ipynb
code/Basic/: Runnable.ipynb  batch.ipynb
code/LangGraph/: Human-in-the-loop.ipynb  LangGraph-Agent-With-Memory.ipynb  LangGraph-Agent.ipynb  LangGraph-Branching.ipynb  LangGraph-Research-Assistant.ipynb  LangGraph-Streaming-Outputs.ipynb  LangGraph-Streaming-Steps.ipynb  LangGraph-SubGraph-Transform-State.ipynb  LangGraph-Subgraph.ipynb  langgraph-intro.ipynb  langgraph_groundcheck.ipynb  plan-and-execute.ipynb  rewoo.ipynb
code/Memory/: ConversationBefferMemory.ipynb  ConversationBefferWindowMemory.ipynb  ConversationEntityMemory.ipynb  ConversationKGMemory.ipynb  ConversationSummaryMemory.ipynb  ConversationTokenBefferMemory.ipynb  Conversation_with_history.ipynb  LCEL-add-chain.ipynb  Memory-using-SQLite.ipynb  VectorStoreRetrieverMemory.ipynb
code/Model/: Cache.ipynb  Serialization.ipynb  TokenUsage.ipynb
code/OutputParser/: datetime_outputparser.ipynb  enum_outputparser.ipynb  json_outputparser.ipynb  pandasdataframe_outputparser.ipynb
code/Prompt/: prompt_template.ipynb
code/streamlit_practice/: main.py
code/streamlit_practice/prompts/: sns_prompt.yaml
prompts/: capital.yaml
